[package]
name = "data-finder"
version = "1.0.3"
authors = ["pewpew79 <grigoriev.d3@mail.ru>"]
edition = "2018"



[dependencies]
grok = "^1.2"
glob = "^0.3"
rayon = "^1.5"
itertools = "^0.10"
serde_yaml = "^0.8"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
clap = { version = "^2.33", features = ["yaml"] }



[profile.dev]
codegen-units = 128
opt-level = 1
incremental = true


[profile.release]
codegen-units = 1
opt-level = 3
incremental = false
